@@ -35,7 +35,7 @@ namespace std {
 using ::snprintf;
 }
 #else
-using ::snprintf;
+using std::snprintf;
 #endif
 
 ShapeBrowser::ShapeBrowser()
