@@ -31,7 +31,7 @@ namespace std {
 using ::snprintf;
 }
 #else
-using ::snprintf;
+using std::snprintf;
 #endif
 
 #include "gamewin.h"
